--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>remote-ws-target-web</module>
+        <module>remote-ws-target-ws-web</module>
         <module>remote-ws-target-service</module>
         <module>remote-ws-target-ear</module>
         <module>remote-ws-target-parent</module>
