--- a/remote-ws-target-ear/pom.xml
+++ b/remote-ws-target-ear/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>com.magicvalleyworks.remotewstarget</groupId>
-            <artifactId>remote-ws-target-web</artifactId>
+            <artifactId>remote-ws-target-ws-web</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
@@ -49,8 +49,8 @@
                         register our War as a web module and set the contextRoot property -->
                         <webModule>
                             <groupId>com.magicvalleyworks.remotewstarget</groupId>
-                            <artifactId>remote-ws-target-web</artifactId>
-                            <contextRoot>/ret</contextRoot>
+                            <artifactId>remote-ws-target-ws-web</artifactId>
+                            <contextRoot>/rwst</contextRoot>
                         </webModule>
                     </modules>
                 </configuration>
