--- a/remote-ws-target-parent/remote-ws-target-parent-ws-web/pom.xml
+++ b/remote-ws-target-parent/remote-ws-target-parent-ws-web/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>remote-ws-target-parent-web</artifactId>
+    <artifactId>remote-ws-target-parent-ws-web</artifactId>
     <packaging>pom</packaging>
 
     <dependencies>
@@ -19,8 +19,16 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.jboss.spec.javax.ws.rs</groupId>
-            <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.2.8</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-ri</artifactId>
+            <version>2.3.0</version>
+            <type>pom</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
