--- a/remote-ws-target-ws-web/pom.xml
+++ b/remote-ws-target-ws-web/pom.xml
@@ -6,11 +6,11 @@
         <artifactId>remote-ws-target-parent-web</artifactId>
         <groupId>com.magicvalleyworks.remotewstarget</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../remote-ws-target-parent/remote-ws-target-parent-web</relativePath>
+        <relativePath>../remote-ws-target-parent/remote-ws-target-parent-ws-web</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>remote-ws-target-web</artifactId>
+    <artifactId>remote-ws-target-ws-web</artifactId>
     <packaging>war</packaging>
 
     <dependencies>
