--- a/remote-ws-target-ear/pom.xml
+++ b/remote-ws-target-ear/pom.xml
@@ -25,6 +25,12 @@
             <version>1.0-SNAPSHOT</version>
             <type>ejb</type>
         </dependency>
+        <dependency>
+            <groupId>com.magicvalleyworks.remotewstarget</groupId>
+            <artifactId>wf-consul-registrar</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>ejb</type>
+        </dependency>
     </dependencies>
 
     <build>
