--- a/remote-ws-target-parent/pom.xml
+++ b/remote-ws-target-parent/pom.xml
@@ -35,6 +35,11 @@
             <version>1.7.22</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
