another failed attempt to load ws-reg-conf.json from classpath

--- a/remote-ws-target-ear/pom.xml
+++ b/remote-ws-target-ear/pom.xml
@@ -59,6 +59,7 @@
                             <contextRoot>/rwst</contextRoot>
                         </webModule>
                     </modules>
+                    <earSourceDirectory>src/main/resources</earSourceDirectory>
                 </configuration>
             </plugin>
         </plugins>
