--- a/remote-ws-target-ear/pom.xml
+++ b/remote-ws-target-ear/pom.xml
@@ -35,6 +35,12 @@
             <version>1.0-SNAPSHOT</version>
             <type>ejb</type>
         </dependency>
+        <dependency>
+            <groupId>com.magicvalleyworks.remotewstarget</groupId>
+            <artifactId>wf-consul-registrar-config</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
@@ -62,31 +68,13 @@
                             <artifactId>remote-ws-target-ws-web</artifactId>
                             <contextRoot>/rwst</contextRoot>
                         </webModule>
+                        <jarModule>
+                            <groupId>com.magicvalleyworks.remotewstarget</groupId>
+                            <artifactId>wf-consul-registrar-config</artifactId>
+                            <bundleFileName>wf-consul-registrar-config.jar</bundleFileName>
+                        </jarModule>
                     </modules>
                 </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <id>copy-resources</id>
-                        <!-- here the phase you need -->
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${basedir}/target/${earFinalName}/lib</outputDirectory>
-                            <resources>
-                                <resource>
-                                    <directory>src/main/resources</directory>
-                                    <filtering>true</filtering>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
