--- a/remote-ws-target-ws-web/pom.xml
+++ b/remote-ws-target-ws-web/pom.xml
@@ -27,6 +27,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.magicvalleyworks.remotewstarget</groupId>
+            <artifactId>wf-consul-registrar</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
