--- a/remote-ws-target-ws-web/src/main/webapp/WEB-INF/web.xml
+++ b/remote-ws-target-ws-web/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,20 @@
 		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <context-param>
-        <param-name>WEB_SERVICES_REGISTRATION_CONFIGURATION_FILE</param-name>
+        <param-name>WEB_SERVICES_REGISTRATION_CONFIGURATION_FILE_NAME</param-name>
         <param-value>ws-reg-conf.json</param-value>
     </context-param>
+    <!-- OPTIONAL PARAMETERS -->
+    <context-param>
+        <param-name>CONSUL_HOST_OVERRIDE</param-name>
+        <param-value>195.133.1.42</param-value>
+    </context-param>
+    <context-param>
+        <param-name>CONSUL_PORT_OVERRIDE</param-name>
+        <param-value>8500</param-value>
+    </context-param>
+    <!-- END OF OPTIONAL PARAMETERS -->
     <listener>
-        <listener-class>com.magicvalleyworks.remotewstarget.wfconsulregistrar.startup.ConsulRegistrarServletContextListener</listener-class>
+        <listener-class>com.magicvalleyworks.remotewstarget.wfwebconsulregistrar.startup.ConsulRegistrarServletContextListener</listener-class>
     </listener>
 </web-app>
