--- a/wf-web-consul-registrar/pom.xml
+++ b/wf-web-consul-registrar/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>wf-consul-registrar</artifactId>
+    <artifactId>wf-web-consul-registrar</artifactId>
     <packaging>jar</packaging>
 
     <dependencyManagement>
@@ -53,6 +53,11 @@
             <artifactId>javaee-api</artifactId>
             <version>8.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
         </dependency>
     </dependencies>
 
