--- a/remote-ws-target-ear/pom.xml
+++ b/remote-ws-target-ear/pom.xml
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>com.magicvalleyworks.remotewstarget</groupId>
-            <artifactId>remote-ws-target-ws-web</artifactId>
+            <artifactId>remote-ws-target-ws-facade</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
@@ -53,7 +53,7 @@
                         register our War as a web module and set the contextRoot property -->
                         <webModule>
                             <groupId>com.magicvalleyworks.remotewstarget</groupId>
-                            <artifactId>remote-ws-target-ws-web</artifactId>
+                            <artifactId>remote-ws-target-ws-facade</artifactId>
                             <contextRoot>/rwst</contextRoot>
                         </webModule>
                     </modules>
