compile facade-ws-api sources with maven plugin, move api proxy into separate module

--- a/remote-ws-target-parent/pom.xml
+++ b/remote-ws-target-parent/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>remote-ws-target-parent-facade-ws</module>
+        <module>remote-ws-target-parent-facade-ws-api-proxy</module>
     </modules>
 
     <dependencyManagement>
