--- a/remote-ws-target-facade-ws-api/pom.xml
+++ b/remote-ws-target-facade-ws-api/pom.xml
@@ -2,15 +2,46 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>remote-ws-target-parent-facade-ws</artifactId>
-        <groupId>com.magicvalleyworks.remotewstarget</groupId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath>../remote-ws-target-parent/remote-ws-target-parent-facade-ws</relativePath>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.magicvalleyworks.remotewstarget</groupId>
     <artifactId>remote-ws-target-facade-ws-api</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxws-maven-plugin</artifactId>
+                <version>2.5</version>
+                <executions>
+                    <execution>
+                        <id>simpleWebServiceWSDL</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>wsimport</goal>
+                        </goals>
+                        <configuration>
+                            <wsdlFiles>
+                                <wsdlFile>${project.basedir}/src/main/resources/wsdl/simpleWebService.wsdl</wsdlFile>
+                            </wsdlFiles>
+                            <wsdlLocation>/wsdl/simpleWebService.wsdl</wsdlLocation>
+                            <keep>true</keep>
+                            <packageName>com.magicvalleyworks.remotewstarget.wsfacadeapi.simplews</packageName>
+                            <sourceDestDir>${project.build.directory}/generated/src/main/java</sourceDestDir>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>javax.xml.ws</groupId>
+                        <artifactId>jaxws-api</artifactId>
+                        <version>2.3.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
