--- a/remote-ws-target-facade-ws/src/main/resources/ws-reg-conf.yaml
+++ b/remote-ws-target-facade-ws/src/main/resources/ws-reg-conf.yaml
@@ -1,3 +1,4 @@
+# This configuration file is used by wf-consul-web-registrar
 ---
   webServiceRegistrationConfigurations:
     - name: SimpleWebService
