--- a/consul-based-ws-client/pom.xml
+++ b/consul-based-ws-client/pom.xml
@@ -9,13 +9,24 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>remote-ws-target-parent-facade-ws-api-proxy</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>consul-based-ws-client</artifactId>
+
+    <properties>
+        <consul.api.version>1.4.1</consul.api.version>
+        <commons.lang3.version>3.8.1</commons.lang3.version>
+    </properties>
 
     <dependencies>
         <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
+            <groupId>com.ecwid.consul</groupId>
+            <artifactId>consul-api</artifactId>
+            <version>${consul.api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang3.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
