--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>remote-ws-target-ear</module>
         <module>remote-ws-target-parent</module>
         <module>remote-ws-target-facade-ws</module>
-        <module>remote-ws-target-facade-ws-api-proxy</module>
+        <module>consul-based-ws-client</module>
     </modules>
 
 </project>
